source/stylesheets/components/blog/_blog_layout.scss
.BlogLayout {
  @include outside-padding;
  background-color: gray('background');
  display: flex;
  flex-direction: column;
  min-height: 100%;
  padding-bottom: 20px;

  &-container {
    align-items: stretch;
    display: flex;
    flex: 1 0 auto;
    flex-direction: column;

    @media (min-width: 900px) {
      align-items: flex-start;
      flex-direction: row;
    }
  }

  &-mainContent {
    background: gray('white');
    flex: 1 1 auto;
    margin-bottom: 50px;
    min-width: 0;
    padding: 20px;

    @media (min-width: 900px) {
      margin-bottom: 0;
      margin-right: 50px;
    }
  }

  &-aside,
  &-header {
    flex: 0 0 auto;
  }

  &-header {
    background: gray('white');
    margin: 20px 0;
    padding: 0 20px;

    &-title,
    &-subTitle {
      display: inline-block;
      font-weight: normal;
      margin: 10px 0;
    }

    &-title {
      font-size: 55px;
      margin-right: 30px;
      text-transform: uppercase;
    }

    &-subTitle {
      @include body-font;
      font-size: 20px;
    }
  }

  &-aside {
    background-color: gray('white');
    padding: 20px;
  }
}

